kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-api
  labels:
    app: main-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-api
  template:
    metadata:
      name: main-api
      labels:
        app: main-api
    spec:
      containers:
        - name: api
          image: ghcr.io/zgamelogic/main-api:production
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
