kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-api
spec:
  rules:
    - host: "zgamelogic.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: main-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 3000
  tls:
    - hosts:
        - "zgamelogic.com"
      secretName: ingress-tls
